# Backend.NodeSql.EducationApp/controllers/admin/setup/form.controller.js
@@ -67,7 +67,7 @@ const GetFormDetails = async (req, res, next) => {
                             return res.send(ServiceResult);
                         } catch (error) {
                             ServiceResult.Message = "Failed to parse api response!";
-                            ServiceResult.Description = error;
+                            ServiceResult.Description = error.message;
                             ServiceResult.Result = false;
                             ServiceResult.Data = null;
                             return res.send(ServiceResult);
@@ -137,7 +137,7 @@ const AddEditFormDetails = async (req, res, next) => {
         }
         if (isNaN(Number(iFK_ParentId)) || isNaN(Number(iPK_FormId))) {
             ServiceResult.Message = "Validation Error!";
-            ServiceResult.Description = '(FormId, SolutionId, ParentId, IsActive) body parameters must be contains valid numbers or zero!';
+            ServiceResult.Description = '(FormId, SolutionId, ParentId) body parameters must be contains valid numbers or zero!';
             ServiceResult.Result = false;
             ServiceResult.Data = null;
             return res.send(ServiceResult);
@@ -184,7 +184,7 @@ const AddEditFormDetails = async (req, res, next) => {
                             console.log(err);
                             sql.close();
                             ServiceResult.Message = "Failed to parse api response!";
-                            ServiceResult.Description = JSON.stringify(err);
+                            ServiceResult.Description = err.message;
                             ServiceResult.Result = false;
                             ServiceResult.Data = null;
                             return res.send(ServiceResult);
@@ -264,7 +264,7 @@ const DeleteFormsDetails = async (req, res, next) => {
         await sql.connect(config.sql, function (err) {
             if (err) {
                 ServiceResult.Message = "Failed to parse api response!";
-                ServiceResult.Description = err;
+                ServiceResult.Description = err.message;
                 ServiceResult.Result = false;
                 ServiceResult.Data = null;
                 return res.send(ServiceResult);
@@ -279,7 +279,7 @@ const DeleteFormsDetails = async (req, res, next) => {
                 if (err) {
                     sql.close();
                     ServiceResult.Message = "Failed to parse api response!";
-                    ServiceResult.Description = err;
+                    ServiceResult.Description = err.message;
                     ServiceResult.Result = false;
                     ServiceResult.Data = null;
                     return res.send(ServiceResult);
@@ -295,7 +295,7 @@ const DeleteFormsDetails = async (req, res, next) => {
                             return res.send(ServiceResult);
                         } catch (error) {
                             ServiceResult.Message = "Failed to parse api response!";
-                            ServiceResult.Description = error;
+                            ServiceResult.Description = error.message;
                             ServiceResult.Result = false;
                             ServiceResult.Data = null;
                             return res.send(ServiceResult);
